p2/scripts/app1.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-1
  labels:
    app: app-1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-1
  template:
    metadata:
      labels:
        app: app-1
    spec:
      containers:
      - name: app-1
        image: paulbouwer/hello-kubernetes:1.10
        imagePullPolicy: IfNotPresent
