p2/scripts/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  
spec:
  rules:
    - host: "app1.com"
      http:
          paths:
            - path: /
              pathType: Prefix
              backend:
                service:
                  name: app1
                  port:
                    number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  
spec:
  rules:
    - host: "app2.com"
      http:
          paths:
            - path: /
              pathType: Prefix
              backend:
                service:
                  name: app-2
                  port:
                    number: 80
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  
spec:
  rules:
    - host: "app3.com"
      http:
          paths:
            - path: /
              pathType: Prefix
              backend:
                service:
                  name: app-3
                  port:
                    number: 80
---
